# onehealth-data-backend

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  release.yml
_scripts/: convert_NUTS.py  gen_reference_pages.py
about/: index.html
contact/: index.html
data/: index.html
datalake/: index.html
docs/: data.md  datalake.md  issues.md
docs/source/javascripts/: md4py.js
docs/source/notebooks/: data_pipeline.ipynb  prepare_data.ipynb  tutorial_A_download_data.ipynb  tutorial_B_preprocess_data.ipynb  tutorial_C_postprocess_data.ipynb
heiplanet_data/: __init__.py  era5_settings.json  inout.py  isimip_settings.json  preprocess.py  script.py  utils.py
heiplanet_data/test/: conftest.py  test_inout.py  test_preprocess.py  test_utils.py
issues/: index.html
license/: index.html
onehealth_data_backend/: default_settings.json  era5_settings.json  inout.py  isimip_settings.json  preprocess.py  script.py  setting_schema.json  utils.py
onehealth_data_backend/test/: test_inout.py  test_preprocess.py  test_utils.py
reference/SUMMARY/: index.html
reference/inout/: index.html
reference/preprocess/: index.html
reference/script/: index.html
reference/utils/: index.html
search/: search_index.json
source/javascripts/: md4py.js
source/notebooks/data_pipeline/: index.html
source/notebooks/prepare_data/: index.html
source/notebooks/tutorial_A_download_data/: index.html
source/notebooks/tutorial_B_preprocess_data/: index.html
source/notebooks/tutorial_C_postprocess_data/: index.html
