[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heiplanet-data"
license = {text = "MIT License"}
dynamic = ["version"]
readme = "README.md"
description = "Data processing pipeline for heiplanet"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = [
  { name="Tuyen Le", email="ssc@iwr.uni-heidelberg.de" },
  { name="Inga Ulusoy", email="ssc@iwr.uni-heidelberg.de" },
]

dependencies = [
  "cdsapi",
  "xarray",
  "netcdf4",
  "cfgrib",
  "jupyter",
  "matplotlib",
  "geopandas",
  "dask[complete]",
  "scipy",
  "isimip-client"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    ]

docs = [
    "mkdocs-material",
    "mkdocs-include-markdown-plugin",
    "mkdocs-glightbox",
    "mkdocs-jupyter",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
    "mkdocs-minify-plugin",
    "mkdocstrings-python",
]

[project.urls]
Homepage = "https://github.com/ssciwr/heiplanet-data"
Issues = "https://github.com/ssciwr/heiplanet-data/issues"
