[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "heiplanet-data"
license = "MIT"
dynamic = ["version"]
readme = "README.md"
description = "Data processing pipeline for heiplanet"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
authors = [
  { name="Tuyen Le", email="ssc@iwr.uni-heidelberg.de" },
  { name="Inga Ulusoy", email="ssc@iwr.uni-heidelberg.de" },
]

dependencies = [
  "cdsapi",
  "xarray",
  "netcdf4",
  "cfgrib",
  "jupyter",
  "matplotlib",
  "geopandas",
  "dask[complete]",
  "scipy",
  "isimip-client"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    ]

docs = [
    "mkdocs-material",
    "mkdocs-include-markdown-plugin",
    "mkdocs-glightbox",
    "mkdocs-jupyter",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
    "mkdocs-minify-plugin",
    "mkdocstrings-python",
]

[project.urls]
Homepage = "https://github.com/ssciwr/heiplanet-data"
Issues = "https://github.com/ssciwr/heiplanet-data/issues"

[tool.setuptools]
packages = ["heiplanet_data"]
# This tells setuptools to include non-Python files
include-package-data = true

# Tell setuptools what to include in the package
[tool.setuptools.package-data]
"heiplanet_data" = ["*.json"]