[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "heiplanet-data"
license = "MIT"
version = "0.0.1"
readme = "README.md"
description = "Data processing pipeline for heiplanet"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
authors = [
  { name="Tuyen Le", email="ssc@iwr.uni-heidelberg.de" },
  { name="Inga Ulusoy", email="ssc@iwr.uni-heidelberg.de" },
]

dependencies = [
  "cdsapi",
  "xarray",
  "netcdf4",
  "cfgrib",
  "jupyter",
  "matplotlib",
  "geopandas",
  "dask[complete]",
  "scipy",
  "isimip-client"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    ]

docs = [
    "mkdocs-material",
    "mkdocs-include-markdown-plugin",
    "mkdocs-glightbox",
    "mkdocs-jupyter",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
    "mkdocs-minify-plugin",
    "mkdocstrings-python",
]

[project.urls]
Homepage = "https://github.com/ssciwr/heiplanet-data"
Issues = "https://github.com/ssciwr/heiplanet-data/issues"

[tool.hatch.build.targets.wheel]
packages = ["heiplanet_data"]
include-package-data = true
include = [
  "heiplanet_data/*.json"
]

[tool.hatch.version]
source = "vcs"
tag-pattern = "v(?P<version>.+)"